--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,7 @@
-streamlit==1.28.1
-yfinance==0.2.18
-pandas==2.1.3
-plotly==5.17.0
-websocket-client==1.6.4
-requests==2.31.0
-python-dotenv==1.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-xgboost>=1.7.0
-lightgbm>=4.0.0
-catboost>=1.2.0
-joblib>=1.3.0
-pickle-mixin>=1.0.2
-openpyxl>=3.1.0
-scipy>=1.10.0
-yellowbrick>=1.5.0
-shap>=0.42.0
-eli5>=0.13.0
-lime>=0.2.0.1
-boto3>=1.34.0
-botocore>=1.34.0
-azure-identity>=1.15.0
-azure-mgmt-security>=5.0.0
-azure-mgmt-resource>=23.0.0
-google-cloud-securitycenter>=1.10.0
-google-cloud-asset>=3.7.0
-cryptography>=41.0.0
-pyyaml>=6.0
-jinja2>=3.1.0 
+streamlit>=1.28.0
+yfinance>=0.2.18
+pandas>=2.2.0
+plotly>=5.17.0
+websocket-client>=1.6.4
+requests>=2.31.0
+python-dotenv>=1.0.0
